--- a/_sass/minima/fastpages-dracula-highlight.scss
+++ b/_sass/minima/fastpages-dracula-highlight.scss
@@ -27,8 +27,8 @@ $dt-green-light: rgb(172, 229, 145);
     color: $dt-gray-light;
 }
 
-.language-python + .language-plaintext code { background-color: white !important; }
-.language-python + .language-plaintext pre  { background-color: white !important; }
+.language-python + .language-plaintext code { background-color: rgb(69, 81, 121) !important; }
+.language-python + .language-plaintext pre  { background-color: rgb(69, 81, 121) !important; }
 
 // for Jupyter Notebook HTML Code Cells modified from https://www.fast.ai/public/css/hyde.css
 
