deploy: b3292be834f13b95b2cf0471f45041321cf21960

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,9 +431,9 @@ pre code { font-size: 15px !important; }
 
 [class^="language-"]:not(.language-plaintext) pre, [class^="language-"]:not(.language-plaintext) code { background-color: #323443 !important; color: #f8f8f2; }
 
-.language-python + .language-plaintext code { background-color: white !important; }
+.language-python + .language-plaintext code { background-color: #455179 !important; }
 
-.language-python + .language-plaintext pre { background-color: white !important; }
+.language-python + .language-plaintext pre { background-color: #455179 !important; }
 
 .input_area pre, .input_area div { margin-bottom: 1.0rem !important; margin-top: 1.5rem !important; padding-bottom: 0 !important; padding-top: 0 !important; background: #323443 !important; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-family: Menlo, Monaco, Consolas, "Lucida Console", Roboto, Ubuntu, monospace; border-radius: 5px; font-size: 105%; }
 
